[gd_scene load_steps=10 format=3 uid="uid://dina4nswdc6uj"]

[ext_resource type="PackedScene" uid="uid://b1d14cno5qcy7" path="res://background.tscn" id="1_pm0dm"]
[ext_resource type="Script" path="res://scenes/FirstLevel.gd" id="1_yx44f"]
[ext_resource type="TileSet" uid="uid://blj0g7hfhntgr" path="res://scenes/Tilemap.tres" id="3_w0shj"]
[ext_resource type="PackedScene" uid="uid://bwmdo33jnr2y3" path="res://objects/blueGem.tscn" id="4_vp26j"]
[ext_resource type="PackedScene" uid="uid://5v5v0y6w2p3v" path="res://objects/pinkGem.tscn" id="5_cqoi4"]
[ext_resource type="PackedScene" uid="uid://7w1iwkujno11" path="res://objects/player.tscn" id="6_r02cb"]
[ext_resource type="PackedScene" uid="uid://37muyfg4on0f" path="res://objects/player2.tscn" id="7_2bgtf"]
[ext_resource type="PackedScene" uid="uid://brgi1iv7an7nc" path="res://scenes/hud.tscn" id="8_3u02g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yin7d"]
size = Vector2(50, 114)

[node name="FirstLevel" type="Node"]
script = ExtResource("1_yx44f")

[node name="TextureRect" parent="." instance=ExtResource("1_pm0dm")]
anchors_preset = -1
anchor_left = 0.001
anchor_right = 1.0
anchor_bottom = 1.019
offset_left = -0.92
offset_right = -8.0
offset_bottom = -20.52
grow_horizontal = 2
grow_vertical = 2

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(3, 3)
tile_set = ExtResource("3_w0shj")
rendering_quadrant_size = 48
format = 2
layer_0/name = "Main"
layer_0/tile_data = PackedInt32Array(1376256, 393216, 1, 1376257, 458752, 1, 1376258, 458752, 1, 1376259, 458752, 1, 1376260, 458752, 1, 1376261, 458752, 1, 1376262, 458752, 1, 1376263, 458752, 1, 1376264, 458752, 1, 1376265, 458752, 1, 1376266, 458752, 1, 1376267, 458752, 1, 1376268, 458752, 1, 1376269, 458752, 1, 1376270, 458752, 1, 1376271, 458752, 1, 1376272, 458752, 1, 1376273, 458752, 1, 1376274, 458752, 1, 1376275, 458752, 1, 1376276, 458752, 1, 1376277, 458752, 1, 1376278, 458752, 1, 1376279, 458752, 1, 1376280, 458752, 1, 1376281, 458752, 1, 1376282, 458752, 1, 1376283, 458752, 1, 1376284, 458752, 1, 1376285, 458752, 1, 1376286, 458752, 1, 1376287, 458752, 1, 1376288, 458752, 1, 1376289, 458752, 1, 1376290, 458752, 1, 1310754, 458752, 1, 1245218, 458752, 0, 1310753, 458752, 1, 1310752, 458752, 1, 1310751, 458752, 1, 1310750, 458752, 1, 1310749, 458752, 1, 1310748, 458752, 1, 1310747, 458752, 1, 1310746, 458752, 1, 1310745, 458752, 1, 1310744, 458752, 1, 1310743, 458752, 1, 1310742, 458752, 1, 1310741, 458752, 1, 1310740, 458752, 1, 1310739, 458752, 1, 1310738, 458752, 1, 1310737, 458752, 1, 1310736, 458752, 1, 1310735, 458752, 1, 1310734, 458752, 1, 1310733, 458752, 1, 1310732, 458752, 1, 1310731, 458752, 1, 1310730, 458752, 1, 1310729, 458752, 1, 1310728, 458752, 1, 1310727, 458752, 1, 1310726, 458752, 1, 1310725, 458752, 1, 1310724, 458752, 1, 1310723, 458752, 1, 1310722, 458752, 1, 1310721, 458752, 1, 1310720, 393216, 1, 1245185, 458752, 0, 1245191, 458752, 1, 1245186, 458752, 0, 1245187, 458752, 0, 1245188, 458752, 0, 1245189, 458752, 0, 1245190, 458752, 1, 1245192, 458752, 1, 1245193, 458752, 1, 1245194, 458752, 1, 1245195, 458752, 1, 1245196, 458752, 1, 1245197, 458752, 1, 1245198, 458752, 0, 1245199, 458752, 0, 1245200, 458752, 0, 1245201, 458752, 0, 1245202, 458752, 0, 1245203, 458752, 0, 1245204, 458752, 0, 1245205, 458752, 0, 1245206, 458752, 0, 1245207, 458752, 0, 1245208, 458752, 0, 1245209, 458752, 0, 1245210, 458752, 0, 1245211, 458752, 0, 1245212, 458752, 0, 1245213, 458752, 0, 1245214, 458752, 0, 1245215, 458752, 0, 1245216, 458752, 0, 1245217, 458752, 0, 1245184, 393216, 0, 1376295, 524288, 1, 1245223, 524288, 0, 1310759, 524288, 1, 1310755, 458752, 1, 1310756, 458752, 1, 1310757, 458752, 1, 1310758, 458752, 1, 1376291, 458752, 1, 1376292, 458752, 1, 1376293, 458752, 1, 1376294, 458752, 1, 1245219, 458752, 0, 1245220, 458752, 0, 1245221, 458752, 0, 1245222, 458752, 0, 1441792, 393216, 1, 1441793, 458752, 1, 1441794, 458752, 1, 1441795, 458752, 1, 1441796, 458752, 1, 1441797, 458752, 1, 1441812, 458752, 1, 1441811, 458752, 1, 1441810, 458752, 1, 1441809, 458752, 1, 1441808, 458752, 1, 1441807, 458752, 1, 1441806, 458752, 1, 1441805, 458752, 1, 1441804, 458752, 1, 1441803, 458752, 1, 1441802, 458752, 1, 1441801, 458752, 1, 1441800, 458752, 1, 1441799, 458752, 1, 1441798, 458752, 1, 1441813, 458752, 1, 1441814, 458752, 1, 1441815, 458752, 1, 1441816, 458752, 1, 1441817, 458752, 1, 1441818, 458752, 1, 1441819, 458752, 1, 1441820, 458752, 1, 1441821, 458752, 1, 1441822, 458752, 1, 1441823, 458752, 1, 1441824, 458752, 1, 1441825, 458752, 1, 1441826, 458752, 1, 1441827, 458752, 1, 1441828, 458752, 1, 1441829, 458752, 1, 1441830, 458752, 1, 1441831, 524288, 1, 1048583, 393216, 0, 1048584, 458752, 0, 1114118, 393216, 0, 1114119, 458752, 1, 1114120, 458752, 1, 1179654, 393216, 1, 1179655, 458752, 1, 1179656, 458752, 1, 1048585, 458752, 0, 1048586, 458752, 0, 1048587, 458752, 0, 1048588, 524288, 0, 1114121, 458752, 1, 1179657, 458752, 1, 1114122, 458752, 1, 1179658, 458752, 1, 1114123, 458752, 1, 1179659, 458752, 1, 1114124, 524288, 1, 1179660, 458752, 1, 1179661, 524288, 0, 393237, 1179648, 1342177281, 458773, 1179648, 1342177281, 524309, 1179648, 1342177281, 589845, 1179648, 1342177281, 655381, 1179648, 1342177281, 720917, 1179648, 1342177281, 786453, 1179648, 1342177281, 851989, 1179648, 1342177281, 917525, 1179648, 1342177281, 983061, 1179648, 1342177281, 1048597, 1179648, 1342177281, 1114133, 1179648, 1342177281, 327701, 1179648, 1342177281, 262165, 1114112, 1342177281, 1179669, 1179648, 1342177281)
layer_1/name = "Platforms"
layer_1/tile_data = PackedInt32Array(851989, 1114112, 1, 262166, 1245184, 1, 262165, 1114112, 1, 327696, 1245184, 1, 327695, 1179648, 1, 327694, 1179648, 1, 327693, 1179648, 1, 327692, 1179648, 1, 327691, 1114112, 1, 458761, 1245184, 1, 589836, 1245184, 1, 589835, 1114112, 1, 851990, 1179648, 1, 851991, 1245184, 1, 458754, 458752, 0, 458753, 458752, 0, 458752, 458752, 0, 524290, 458752, 1, 589826, 458752, 1, 655362, 458752, 1, 720898, 458752, 2, 720897, 458752, 2, 720896, 458752, 2, 524288, 458752, 1, 589824, 458752, 1, 655360, 458752, 1, 655361, 458752, 1, 589825, 458752, 1, 524289, 458752, 1, 458755, 524288, 0, 524291, 524288, 1, 655363, 524288, 1, 720899, 524288, 2, 589827, 524288, 1, 983058, 1245184, 1, 983057, 1114112, 1, 196634, 1114112, 1, 196635, 1245184, 1, 983069, 1179648, 1610612737, 1114144, 1179648, 1342177281, 1179680, 1179648, 1342177281, 1048605, 1179648, 1610612737, 393255, 458752, 1, 393254, 458752, 1, 393253, 458752, 2, 393252, 458752, 2, 393251, 458752, 2, 393250, 458752, 2, 393249, 393216, 2, 393246, 65540, 2, 393245, 65540, 2, 393244, 65540, 2, 393243, 65540, 2, 393242, 65540, 2, 393241, 65540, 2, 393240, 65540, 2, 393239, 65540, 2, 393247, 131076, 2, 589863, 458752, 1, 589862, 655360, 1, 589861, 458752, 0, 589860, 458752, 0, 589859, 458752, 0, 589858, 458752, 0, 589857, 458752, 0, 589856, 458752, 0, 589855, 458752, 0, 589854, 458752, 0, 589853, 458752, 0, 589852, 458752, 0, 589851, 458752, 0, 589850, 458752, 0, 589849, 458752, 0, 589848, 393216, 0, 458760, 1114112, 1, 393238, 65540, 2, 917529, 262148, 2, 655384, 393216, 2, 655385, 458752, 2, 655386, 458752, 2, 655387, 458752, 2, 655388, 458752, 2, 655389, 458752, 2, 655390, 458752, 2, 655391, 458752, 2, 655392, 458752, 2, 655393, 458752, 2, 655394, 458752, 2, 655395, 458752, 2, 655396, 458752, 2, 655397, 458752, 2, 655398, 458752, 2, 655399, 524288, 2, 327713, 393216, 0, 327714, 458752, 0, 327715, 458752, 0, 327716, 458752, 0, 327717, 458752, 0, 327718, 458752, 0, 327719, 524288, 0, 458790, 393216, 1, 524326, 393216, 1, 524327, 458752, 1, 458791, 458752, 1, 655383, 4, 2, 720911, 4, 2, 720912, 131076, 2)
layer_2/name = "Platforms (Extra)"
layer_2/tile_data = PackedInt32Array(1114144, 1179648, 1, 1114145, 1245184, 1, 1114143, 1179648, 1, 1114142, 1179648, 1, 1114141, 1179648, 1, 1114140, 1179648, 1, 1114139, 1179648, 1, 1114138, 1179648, 1, 1114137, 1179648, 1, 1114136, 1179648, 1, 1114135, 1114112, 1, 917534, 131076, 2, 917533, 65540, 2, 917532, 4, 2)
layer_3/name = "Backdrop"
layer_3/tile_data = PackedInt32Array(1048613, 2, 4, 1048614, 65538, 4, 1048615, 65538, 4, 1114149, 2, 5, 1179685, 2, 5, 1114150, 65538, 5, 1179686, 65538, 5, 1179687, 65538, 5, 1114151, 65538, 5)
layer_4/name = "Walls"
layer_4/tile_data = PackedInt32Array(1441792, 1179648, 1610612737, 1376256, 1179648, 1610612737, 1310720, 1179648, 1610612737, 1245184, 1179648, 1610612737, 1179648, 1179648, 1610612737, 1114112, 1179648, 1610612737, 1048576, 1179648, 1610612737, 983040, 1179648, 1610612737, 917504, 1179648, 1610612737, 851968, 1179648, 1610612737, 786432, 1179648, 1610612737, 720896, 1179648, 1610612737, 655360, 1179648, 1610612737, 589824, 1179648, 1610612737, 524288, 1179648, 1610612737, 458752, 1179648, 1610612737, 393216, 1179648, 1610612737, 327680, 1179648, 1610612737, 262144, 1179648, 1610612737, 196608, 1179648, 1610612737, 131072, 1179648, 1610612737, 65536, 1179648, 1610612737, 0, 1179648, 1610612737, 524327, 1179648, 1342177281, 589863, 1179648, 1342177281, 655399, 1179648, 1342177281, 720935, 1179648, 1342177281, 786471, 1179648, 1342177281, 852007, 1179648, 1342177281, 917543, 1179648, 1342177281, 983079, 1179648, 1342177281, 1048615, 1179648, 1342177281, 1114151, 1179648, 1342177281, 1179687, 1179648, 1342177281, 1245223, 1179648, 1342177281, 1310759, 1179648, 1342177281, 1376295, 1179648, 1342177281, 1441831, 1179648, 1342177281, 39, 1179648, 1342177281, 65575, 1179648, 1342177281, 131111, 1179648, 1342177281, 196647, 1179648, 1342177281, 262183, 1179648, 1342177281, 327719, 1179648, 1342177281, 393255, 1179648, 1342177281, 458791, 1179648, 1342177281, 26, 1179648, 1, 27, 1179648, 1, 28, 1179648, 1, 29, 1179648, 1, 30, 1179648, 1, 31, 1179648, 1, 32, 1179648, 1, 33, 1179648, 1, 34, 1179648, 1, 35, 1179648, 1, 36, 1179648, 1, 37, 1179648, 1, 38, 1179648, 1, 1, 1179648, 1, 2, 1179648, 1, 3, 1179648, 1, 4, 1179648, 1, 5, 1179648, 1, 6, 1179648, 1, 7, 1179648, 1, 8, 1179648, 1, 9, 1179648, 1, 10, 1179648, 1, 11, 1179648, 1, 12, 1179648, 1, 13, 1179648, 1, 14, 1179648, 1, 15, 1179648, 1, 16, 1179648, 1, 17, 1179648, 1, 18, 1179648, 1, 19, 1179648, 1, 20, 1179648, 1, 21, 1179648, 1, 22, 1179648, 1, 23, 1179648, 1, 24, 1179648, 1, 25, 1179648, 1)
layer_5/name = "Extras (Above Wall)"
layer_5/tile_data = PackedInt32Array(39, 1245184, 1, 0, 1114112, 1)

[node name="ButtonMapping" type="Label" parent="."]
offset_left = 36.0
offset_top = 647.0
offset_right = 282.0
offset_bottom = 758.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Controls:
Player 1: WASD
Player 2: Arrow Keys"

[node name="BlueGem" parent="." instance=ExtResource("4_vp26j")]
position = Vector2(952, 872)
message = "Only Blue can collect me!"

[node name="BlueGem2" parent="." instance=ExtResource("4_vp26j")]
position = Vector2(1536, 872)

[node name="PinkGem" parent="." instance=ExtResource("5_cqoi4")]
position = Vector2(72, 296)
message = "Pink, I'm over here!"

[node name="PinkGem2" parent="." instance=ExtResource("5_cqoi4")]
position = Vector2(1296, 104)

[node name="Player" parent="." instance=ExtResource("6_r02cb")]
position = Vector2(64, 887)

[node name="Player2" parent="." instance=ExtResource("7_2bgtf")]
position = Vector2(110, 888)

[node name="HUD" parent="." instance=ExtResource("8_3u02g")]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1878, 853)
shape = SubResource("RectangleShape2D_yin7d")

[connection signal="collected" from="BlueGem" to="." method="_on_blue_gem_collected"]
[connection signal="collected" from="BlueGem2" to="." method="_on_blue_gem_collected"]
[connection signal="collected" from="PinkGem" to="." method="_on_pink_gem_collected"]
[connection signal="collected" from="PinkGem" to="." method="_on_blue_gem_2_collected"]
[connection signal="collected" from="PinkGem2" to="." method="_on_pink_gem_collected"]
[connection signal="collected" from="PinkGem2" to="." method="_on_blue_gem_2_collected"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
